--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/css/popups.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/topAndBottom.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/height.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/loader.css?v=<%= Date.now() %>">
 
     <!---CSS specific-->
     <link rel="stylesheet" href="/css/styles/professionalLicences/types.css?v=<%= Date.now() %>">
