--- a/src/views/professionalLicences/checkout.ejs
+++ b/src/views/professionalLicences/checkout.ejs
@@ -48,6 +48,13 @@
     </div>
 </form>
 
+<!-- loader -->
+<div class="loader ld-std" id="loader">
+    <div class="ld-content lt-m"></div>
+</div>
+
+<!----------SCRIPTS---------->
+<script type="module" src="/js/professionalLicences/checkout.js?v=<%= Date.now() %>"></script>
 
 
 
