--- a/public/css/inputs.css
+++ b/public/css/inputs.css
@@ -47,7 +47,7 @@
 /* labels */
 .label-std{
     position: absolute;
-    left: 10px;
+    left: 8%;
     top: -8px;
     padding: 0px 5px;
     background-color: white;
