--- a/src/views/professionalLicences/personalData.ejs
+++ b/src/views/professionalLicences/personalData.ejs
@@ -48,6 +48,11 @@
 
 </form>
 
+<!-- loader -->
+<div class="loader ld-std" id="loader">
+    <div class="ld-content lt-m"></div>
+</div>
+
 <!----------SCRIPTS---------->
 <script type="module" src="/js/professionalLicences/personalData.js?v=<%= Date.now() %>"></script>
 
