--- a/src/views/professionalLicences/schedule.ejs
+++ b/src/views/professionalLicences/schedule.ejs
@@ -48,8 +48,15 @@
 
 </form>
 
+<!-- loader -->
+<div class="loader ld-std" id="loader">
+    <div class="ld-content lt-m"></div>
+</div>
+
 <!----------SCRIPTS---------->
 <script type="module" src="/js/professionalLicences/schedule.js?v=<%= Date.now() %>"></script>
+
+
 
 
 
