--- a/src/views/professionalLicences/types.ejs
+++ b/src/views/professionalLicences/types.ejs
@@ -67,6 +67,11 @@
 <!----------SCRIPTS---------->
 <script type="module" src="/js/professionalLicences/types.js?v=<%= Date.now() %>"></script>
 
+<!-- loader -->
+<div class="loader ld-std" id="loader">
+    <div class="ld-content lt-m"></div>
+</div>
+
 
 
 
