--- a/src/views/professionalLicences/categories.ejs
+++ b/src/views/professionalLicences/categories.ejs
@@ -70,6 +70,11 @@
 <!----------SCRIPTS---------->
 <script type="module" src="/js/professionalLicences/categories.js?v=<%= Date.now() %>"></script>
 
+<!-- loader -->
+<div class="loader ld-std" id="loader">
+    <div class="ld-content lt-m"></div>
+</div>
+
 
 
 
