--- a/src/views/professionalLicences/checkout.ejs
+++ b/src/views/professionalLicences/checkout.ejs
@@ -9,7 +9,7 @@
 </div>
 
 <div class="ta-c mt-15 color-red w-500 max-w-95p m-a">
-    <b>Transferir a "FIDEO.PLANO.BARRO" y enviar comprobante a comprobantes@elvientoblanco.org.ar para confirmar su cupo.</b>
+    <b>Transferir a "farola.burla.caucho" y enviar comprobante a comprobantes@elvientoblanco.org.ar para confirmar su cupo.</b>
 </div>
 
 <div class="mt-20 ta-c checkout-info"><b>RESUMEN DE LA INSCRIPCIÓN</b></div>
@@ -27,7 +27,7 @@
 
 <div class="checkout-info m-a mt-20 max-w-95p">
     <b>DOMICILIO: </b>
-    <div class="ta-c">Gral. Manuel Belgrano 1408, Q8300 Neuquén</div>
+    <div class="ta-c">Colón 388, entre Roca y Belgrano, Neuquén. Instituto FAENA, Piso 3.</div>
 </div>
 
 <div class="mt-20 ta-c checkout-info"><b>SUS DATOS</b></div>
