--- a/src/views/professionalLicences/types.ejs
+++ b/src/views/professionalLicences/types.ejs
@@ -22,7 +22,7 @@
             </div>
             <div class="insc-type-info">
                 <div>
-                    <i>Si usted posee licencia nacional de conducir clase B1, con antigüedad mínima de 1 año y desea acceder por primera vez a una licencia profesional, seleccione esta opción.</i>
+                    <i>Si usted posee licencia nacional de conducir clase <b class="insc-highlight">B1, con antigüedad mínima de 1 año</b> y desea acceder por primera vez a una licencia profesional, seleccione esta opción.</i>
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
             </div>
             <div class="insc-type-info">
                 <div>
-                    <i>Si usted posee licencia nacional de conducir profesional (clases C, D o E en cualquiera de sus subclases) y desea obtener la licencia para otra clase o subclase, seleccione esta opción.</i>
+                    <i>Si usted posee licencia nacional de conducir <b class="insc-highlight">profesional</b> (clases C, D o E en cualquiera de sus subclases) y desea ampliar la licencia para otra clase o subclase, seleccione esta opción.</i>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="insc-type-info">
                     <div>
-                        <i>Si usted posee una licencia nacional de conducir profesional próxima a vencer y desea renovarla, seleccione esta opción.</i>
+                        <i>Si usted posee una licencia nacional de conducir <b class="insc-highlight">profesional</b> próxima a vencer y desea renovarla, seleccione esta opción.</i>
                     </div>
                 </div>
             </div>
