--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/head') %>
 <%- include('./partials/header') %>
 
-<form action="/" method="POST">
+<form action="/main/login" method="POST">
     <div class="buttons-column mt-25 mb-25">
         <button type="submit" class="btn-std w-670 max-w-90p pad-11-0">
             INGRESAR
