--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -21,15 +21,18 @@
     <link rel="stylesheet" href="/css/topAndBottom.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/height.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/loader.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/texts.css?v=<%= Date.now() %>">
 
     <!---CSS specific-->
-    <link rel="stylesheet" href="/css/styles/professionalLicences/types.css?v=<%= Date.now() %>">
-    <link rel="stylesheet" href="/css/styles/professionalLicences/categories.css?v=<%= Date.now() %>">
-    <link rel="stylesheet" href="/css/styles/professionalLicences/classes.css?v=<%= Date.now() %>">
-    <link rel="stylesheet" href="/css/styles/professionalLicences/schedule.css?v=<%= Date.now() %>">
-    <link rel="stylesheet" href="/css/styles/professionalLicences/checkout.css?v=<%= Date.now() %>">
-    <link rel="stylesheet" href="/css/styles/professionalLicences/confirmation.css?v=<%= Date.now() %>">
-    <link rel="stylesheet" href="/css/styles/professionalLicences/personalData.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/inscriptions/schedule.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/inscriptions/hazardousMaterials/swornDeclaration.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/types.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/categories.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/classes.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/schedule.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/checkout.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/confirmation.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/styles/inscriptions/professionalLicences/personalData.css?v=<%= Date.now() %>">
                       
 
     <!---Fonts-->
