--- a/src/views/inscriptions/hmSwornDeclaration.ejs
+++ b/src/views/inscriptions/hmSwornDeclaration.ejs
@@ -5,7 +5,7 @@
 
 <div class="fs-17 fw-b ta-c">DECLARACIÓN JURADA</div>
 
-<div class="general-error mt-25 mb-20" id="error">
+<div class="general-error mt-25 mb-15-" id="error">
     <i class="fa-solid fa-triangle-exclamation"></i>
     Para inscribirse a la Habilitación de Cargas Peligrosas debe poseer licencia tipo B con antigüedad mayor a un año
 </div>
