--- a/public/css/styles/inscriptions/schedule.css
+++ b/public/css/styles/inscriptions/schedule.css
@@ -6,3 +6,14 @@
     margin: auto;
     margin-top: 10px;
 }
+
+.sch-days{
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+    width: fit-content;
+    margin: auto;
+    margin-bottom: 10px;
+    padding: 5px;
+    align-items: flex-start;
+}
