--- a/src/views/inscriptions/schedule.ejs
+++ b/src/views/inscriptions/schedule.ejs
@@ -1,13 +1,14 @@
 <%- include('../partials/head') %>
 <%- include('../partials/header') %>
 
-<div class="main-title">HABILITACIÓN CARGAS PELIGROSAS</div>
+<div class="main-title"><%= title.toUpperCase() %></div>
 
 <div class="sch-price"><b><%= 'PRECIO (ARS): ' %></b><%= price.toLocaleString('es-AR',{minimumFractionDigits: 2,maximumFractionDigits: 2}) %></div>
 
 <div class="fs-16 fw-b ta-c mt-35">HORARIOS DISPONIBLES</div>
 
-    <div class="inputs-column mt-25">
+<form action="/inscriptions/set-schedule" method="POST">
+    <div class="inputs-column mt-20">
         <div class="div-input">
             <select  class="input-std w-350 max-w-90p pad-12-0 schedule-data" name="selectDate" id="selectDate">
                 <option value="">--- Seleccione una opción --- </option>
@@ -18,13 +19,20 @@
         </div>
     </div>
 
-    <div class="w-700 max-w-90p m-a mt-35 ta-c">
-        <div class="mb-25 ta-c"><b>HORARIO DE CURSADA</b></div>
-        <div class="mb-20" id="selectedDates"><b>TEÓRICO: </b>Seleccione una fecha de inicio para definir los horarios de cursada del Teórico</div>
+    <div class="general-error mt-15" id="error">
+        <i class="fa-solid fa-triangle-exclamation"></i>
+        Debe seleccionar una fecha para continuar
+    </div>
+
+    <div class="w-700 max-w-90p m-a mt-25 ta-c">
+        <div class="mb-20 ta-c fs-16"><b>HORARIO DE CURSADA</b></div>
+        <div class="mb-5" id="selectedDates"><b>TEÓRICO: </b>Seleccione una fecha de inicio para definir los horarios de cursada del Teórico</div>
+        <div class="sch-days" id="days"></div>
+        
         <div><b>PRÁCTICO: </b>El horario de la Práctica será coordinado con el instructor</div>
     </div>
 
-    <div class="buttons-column mt-50 mb-25">
+    <div class="buttons-column mt-30 mb-15">
         <button type="submit" id="continueButton" class="btn-std w-350 max-w-90p pad-11-0">
             CONTINUAR
         </button>
@@ -33,14 +41,15 @@
             ATRÁS
         </button>
     </div>
-    
-    <!-- loader -->
-    <div class="loader ld-std" id="loader">
-        <div class="ld-content lt-m"></div>
-    </div>
+</form>
 
-    <!----------SCRIPTS---------->
-    <script type="module" src="/js/inscriptions/schedule.js?v=<%= Date.now() %>"></script>
+<!-- loader -->
+<div class="loader ld-std" id="loader">
+    <div class="ld-content lt-m"></div>
+</div>
+
+<!----------SCRIPTS---------->
+<script type="module" src="/js/inscriptions/schedule.js?v=<%= Date.now() %>"></script>
 
 
 
