--- a/public/css/texts.css
+++ b/public/css/texts.css
@@ -29,3 +29,12 @@
 .txt-u{
     text-decoration: underline;
 }
+
+@media (max-width:730px){
+    .fs-17{
+        font-size: 15px;
+    }
+    .fs-16{
+        font-size: 14px;
+    }
+}
