--- a/public/css/width.css
+++ b/public/css/width.css
@@ -144,6 +144,12 @@
 .max-w-40p{
     max-width: 40%;
 }
+.max-w-80p{
+    max-width: 80%;
+}
+.max-w-85p{
+    max-width: 85%;
+}
 .max-w-90p{
     max-width: 90%;
 }
