--- a/src/views/inscriptions/schedule.ejs
+++ b/src/views/inscriptions/schedule.ejs
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <div class="general-error mt-15" id="error">
+    <div class="general-error m-a mt-15" id="error">
         <i class="fa-solid fa-triangle-exclamation"></i>
         Debe seleccionar una fecha para continuar
     </div>
