--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -145,6 +145,7 @@ a{
     align-items: center;
     font-size: 14px;
     display: none;
+    width: 75%;
 }
 
 /* colors */
@@ -154,6 +155,6 @@ a{
 
 @media (max-width:730px){
     .general-error{
-        font-size: 12px;
+        font-size: 13px;
     }
 }
