--- a/src/views/inscriptions/personalData.ejs
+++ b/src/views/inscriptions/personalData.ejs
@@ -7,12 +7,12 @@
 
 <div class="fs-16 fw-b ta-c mt-25">DATOS PERSONALES</div>
 
-<div class="general-error mt-15 mb-15" id="personalDataError">
+<div class="general-error ta-c m-a mt-15 mb-15" id="personalDataError">
     <i class="fa-solid fa-triangle-exclamation"></i>
     <div id="errorText"></div>
 </div>
 
-<form action="/inscriptions/set-personal-data" method="POST">
+<form action="/inscripciones/datos-personales" method="POST">
 
     <div class="inputs-column mt-25">
         <div class="div-input">
