--- a/src/views/inscriptions/hmSwornDeclaration.ejs
+++ b/src/views/inscriptions/hmSwornDeclaration.ejs
@@ -7,10 +7,10 @@
 
 <div class="general-error m-a mt-25" id="error">
     <i class="fa-solid fa-triangle-exclamation"></i>
-    Para inscribirse a la Habilitación de Cargas Peligrosas debe poseer licencia tipo B con antigüedad mayor a un año
+    Para inscribirse a la Habilitación de Cargas Peligrosas debe poseer alguna de las licencias mencionadas abajo
 </div>
 
-<form action="/inscriptions/hazardous-materials/set-sworn-declaration" method="POST">
+<form action="/inscripciones/cargas-peligrosas/declaracion-jurada" method="POST">
 
     <div class="sd-declarations">
         <div class="sd-declaration max-w-85p" id="divCde">
