--- a/src/views/professionalLicences/categories.ejs
+++ b/src/views/professionalLicences/categories.ejs
@@ -3,7 +3,7 @@
 
 <div class="main-title">CATEGORÍAS</div>
 
-<div class="general-error mt-15- mb-20" id="catError">
+<div class="general-error m-a ta-c mt-15- mb-20" id="catError">
     <i class="fa-solid fa-triangle-exclamation"></i>
     Debe seleccionar al menos una categoría para cada trámite
 </div>
@@ -55,7 +55,7 @@
 
             <div class="pp-title pp-tt-m mb-30" id="sdppTitle">DECLARACIÓN JURADA</div>
 
-            <div class="general-error mt-15- mb-20" id="sdppError">
+            <div class="general-error m-a ta-c mt-15- mb-20" id="sdppError">
                 <i class="fa-solid fa-triangle-exclamation"></i>
                 Debe tildar las dos declaraciiones jurada para continuar
             </div>
