--- a/src/views/professionalLicences/personalData.ejs
+++ b/src/views/professionalLicences/personalData.ejs
@@ -3,7 +3,7 @@
 
 <div class="main-title">DATOS PERSONALES</div>
 
-<div class="general-error mt-15- mb-15" id="personalDataError">
+<div class="general-error m-a ta-c mt-15- mb-15" id="personalDataError">
     <i class="fa-solid fa-triangle-exclamation"></i>
     <div id="errorText">Debe completar todos los campos</div>
 </div>
