--- a/src/views/professionalLicences/schedule.ejs
+++ b/src/views/professionalLicences/schedule.ejs
@@ -3,7 +3,7 @@
 
 <div class="main-title">FECHA DE CURSADA</div>
 
-<div class="general-error mt-15- mb-15" id="scheduleError">
+<div class="general-error m-a ta-c mt-15- mb-15" id="scheduleError">
     <i class="fa-solid fa-triangle-exclamation"></i>
     Debe seleccionar una fecha de inicio para continuar
 </div>
