--- a/src/views/professionalLicences/types.ejs
+++ b/src/views/professionalLicences/types.ejs
@@ -5,7 +5,7 @@
 
 <div class="subtitle">Seleccione una o varias opciones para comenzar</div>
 
-<div class="general-error mt-15" id="error">
+<div class="general-error m-a ta-c mt-15" id="error">
     <i class="fa-solid fa-triangle-exclamation"></i>
     Debe seleccionar al menos una categoría
 </div>
