--- a/public/css/styles/inscriptions/professionalLicences/personalData.css
+++ b/public/css/styles/inscriptions/professionalLicences/personalData.css
@@ -21,4 +21,8 @@
     .pd-data{
         font-size: 13px;
     }
+    #personalDataError{
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
 }
