--- a/src/views/inscriptions/hmSwornDeclaration.ejs
+++ b/src/views/inscriptions/hmSwornDeclaration.ejs
@@ -1,13 +1,13 @@
 <%- include('../partials/head') %>
 <%- include('../partials/header') %>
 
-<div class="main-title">OBTENCIÓN CARGAS PELIGROSAS</div>
+<div class="main-title">OBTENCIÓN MERCANCÍAS PELIGROSAS</div>
 
 <div class="fs-17 fw-b ta-c">DECLARACIÓN JURADA</div>
 
 <div class="general-error m-a mt-25" id="error">
     <i class="fa-solid fa-triangle-exclamation"></i>
-    Para inscribirse a la Habilitación de Cargas Peligrosas debe poseer alguna de las licencias mencionadas abajo
+    Para inscribirse a la Habilitación de Mercancías Peligrosas debe poseer alguna de las licencias mencionadas abajo
 </div>
 
 <form action="/inscripciones/cargas-peligrosas/declaracion-jurada" method="POST">
