--- a/src/views/inscriptions/personalData.ejs
+++ b/src/views/inscriptions/personalData.ejs
@@ -63,27 +63,18 @@
 <!--- existing cuit popup (ecpp) --->
 <div class="popup pp-std" id="ecpp">
 
-    <div class="pp-content w-670 max-w-90p max-h-50 top-120" id="ecppContent">
+    <div class="pp-content w-650 max-w-90p max-h-50 top-120" id="ecppContent">
 
         <div class="pp-close" id="ecppClose">
             <div class="pp-close-icon">x</div>
         </div>
 
-        <div class="pd-alert mt-30">
+        <div class="pd-alert">
             <i class="fa-solid fa-triangle-exclamation"></i>
             <div id="ecppCuit"></div>            
         </div>
 
-        <div class="ta-c mt-25 pd-data"><b>DETALLE DE LA INSCRIPCIÓN</b></div>
-        <div id="ecppInfo">
-            <div class="ta-c mt-5 pd-data"></div>
-            <div class="ta-c mt-5 pd-data"></div>
-        </div>
-        
-        <div class="ta-c mt-15 pd-data"><b>ESTADO</b></div>
-        <div class="ta-c mt-5 pd-data">Confirmada</div>
-
-        <div class="ta-c mt-15 pd-data"><b>Si desea modificar su reserva comuníquese por WhatsApp al +54 299 4209290</b></div>
+        <div class="ta-c mt-15 pd-data"><b>Si desea modificar su reserva comuníquese por WhatsApp al +54 299 320-0190</b></div>
 
         <div class="buttons-row mt-30 mb-15">
             <div id="ecppCancel" class="btn-std w-150 pad-9-0">Aceptar</div>
