--- a/public/css/styles/inscriptions/professionalLicences/personalData.css
+++ b/public/css/styles/inscriptions/professionalLicences/personalData.css
@@ -2,17 +2,18 @@
     color:var(--errorColor);
     display: flex;
     column-gap: 5px;
-    font-size: 18px;
+    font-size: 15px;
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    width: 90%;
+    margin: auto;
+    margin-top: 30px;
 }
-
-
 
 @media (max-width:730px){
     .pd-alert{
-        font-size: 15px;
+        font-size: 14px;
         text-align: center;
     }
     #ecppCuit{
