--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="/css/pageDisplay.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/header.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/inputs.css?v=<%= Date.now() %>">
-    <link rel="stylesheet" href="/css/marginsAndPaddings.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/margins.css?v=<%= Date.now() %>">
+    <link rel="stylesheet" href="/css/paddings.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/width.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/tables.css?v=<%= Date.now() %>">
     <link rel="stylesheet" href="/css/buttons.css?v=<%= Date.now() %>">
