--- a/public/css/margins.css
+++ b/public/css/margins.css
@@ -126,79 +126,15 @@
 .mb-55{
     margin-bottom:55px
 }
-
-/* paddings */
-.pad-2-0{
-    padding: 2px 0px
+.mb-60{
+    margin-bottom:60px
 }
-.pad-3-0{
-    padding: 3px 0px
+.mb-65{
+    margin-bottom:65px
 }
-.pad-3-3{
-    padding: 3px 3px
+.mb-70{
+    margin-bottom:70px
 }
-.pad-4-0{
-    padding: 4px 0px
-}
-.pad-5{
-    padding: 5px
-}
-.pad-5-0{
-    padding: 5px 0px
-}
-.pad-0-5{
-    padding: 0px 30px
-}
-
-.pad-6{
-    padding: 6px
-}
-.pad-7{
-    padding: 7px
-}
-.pad-7-0{
-    padding: 7px 0px
-}
-.pad-8{
-    padding: 8px
-}
-.pad-8-0-7-0{
-    padding: 8px 0px 7px 0px
-}
-.pad-9-0{
-    padding: 9px 0px
-}
-.pad-9-0-7-0{
-    padding: 9px 0px 7px 0px
-}
-.pad-10-0{
-    padding: 10px 0px
-}
-.pad-10-0-6-0{
-    padding: 10px 0px 6px 0px
-}
-.pad-11-0{
-    padding: 11px 0px
-}
-.pad-11-0-9-0{
-    padding: 11px 0px 9px 0px
-}
-.pad-12-0{
-    padding: 12px 0px
-}
-.pad-12-0-8-0{
-    padding: 12px 0px 8px 0px
-}
-.pad-14-0-10-0{
-    padding: 14px 0px 10px 0px
-}
-.pad-17-0{
-    padding: 17px 0px
-}
-
-
-@media (max-width:730px){
-    .pad-17-0{
-        padding: 11px 0px;
-    }
+.mb-75{
+    margin-bottom:75px
 }
