--- a/public/css/texts.css
+++ b/public/css/texts.css
@@ -1,6 +1,24 @@
 /*--- text sizes ---*/
+.ts{
+    font-size: 13px;
+}
 .tm{
     font-size: 14px;
+}
+.tl{
+    font-size: 15px;
+}
+.txl{
+    font-size: 16px;
+}
+.txxl{
+    font-size: 17px;
+}
+.txxxl{
+    font-size: 18px;
+}
+.txxxxl{
+    font-size: 19px;
 }
 
 
@@ -19,6 +37,12 @@
 
 .fs-17{
     font-size: 17px;
+}
+
+/*--- font color ---*/
+.fc-blue{
+    color: blue;
+
 }
 
 /*--- font weight ---*/
