--- a/public/css/paddings.css
+++ b/public/css/paddings.css
@@ -66,6 +66,12 @@
 .pad-14-0-10-0{
     padding: 14px 0px 10px 0px
 }
+.pad-14{
+    padding: 14px
+}
+.pad-14{
+    padding: 14px
+}
 .pad-17-0{
     padding: 17px 0px
 }
