--- a/src/views/inscriptions/hmSwornDeclaration.ejs
+++ b/src/views/inscriptions/hmSwornDeclaration.ejs
@@ -24,7 +24,9 @@
         </div>
     </div>
 
-    <div class="buttons-column mt-50 mb-25">
+    <div class="mt-20"><%- include('../partials/contactPopup') %></div>
+
+    <div class="buttons-column mt-30 mb-25">
         <button type="submit" id="continueButton" class="btn-std w-400 max-w-90p pad-11-0">
             CONTINUAR
         </button>
