--- a/src/views/inscriptions/personalData.ejs
+++ b/src/views/inscriptions/personalData.ejs
@@ -39,7 +39,9 @@
         </div>
     </div>
 
-    <div class="buttons-column mt-30 mb-25">
+    <div class="mt-20"><%- include('../partials/contactPopup') %></div>
+
+    <div class="buttons-column mt-25 mb-25">
         <button type="submit" id="continueButton" class="btn-std w-320 max-w-90p pad-11-0">
             CONTINUAR
         </button>
@@ -74,7 +76,7 @@
             <div id="ecppCuit"></div>            
         </div>
 
-        <div class="ta-c mt-15 pd-data"><b>Si desea modificar su reserva comuníquese por WhatsApp al +54 299 320-0190</b></div>
+        <div class="ta-c mt-15 pd-data"><b>Si desea modificar su reserva comuníquese por WhatsApp al +549 299 620-0190</b></div>
 
         <div class="buttons-row mt-30 mb-15">
             <div id="ecppCancel" class="btn-std w-150 pad-9-0">Aceptar</div>
