--- a/src/views/inscriptions/plSelectCourses.ejs
+++ b/src/views/inscriptions/plSelectCourses.ejs
@@ -34,7 +34,9 @@
         <i class="fa-solid fa-circle-info"></i>
     </div>
 
-    <div class="buttons-column mt-25 mb-25">
+    <div class="mt-15"><%- include('../partials/contactPopup') %></div>
+
+    <div class="buttons-column mt-20 mb-25">
         <button type="button" id="continueButton" class="btn-std w-670 max-w-90p pad-11-0">
             CONTINUAR
         </button>
