--- a/src/views/inscriptions/plTypes.ejs
+++ b/src/views/inscriptions/plTypes.ejs
@@ -10,6 +10,8 @@
     Debe seleccionar al menos una categoría
 </div>
 
+<div class="mt-20"><%- include('../partials/contactPopup') %></div>
+
 <form action="/inscripciones/licencias-profesionales/tipos" method="POST">
 
     <div class="insc-type">
