--- a/src/views/inscriptions/schedule.ejs
+++ b/src/views/inscriptions/schedule.ejs
@@ -38,7 +38,9 @@
         <div><b>PRÁCTICO: </b>El horario de la Práctica será coordinado con el instructor</div>
     </div>
 
-    <div class="buttons-column mt-30 mb-15">
+    <div class="mt-20"><%- include('../partials/contactPopup') %></div>
+
+    <div class="buttons-column mt-25 mb-15">
         <button type="submit" id="continueButton" class="btn-std w-350 max-w-90p pad-11-0">
             CONTINUAR
         </button>
