--- a/public/css/height.css
+++ b/public/css/height.css
@@ -1,3 +1,22 @@
+
+
+.h-35{
+    height: 35px;
+}
+
+.h-40{
+    height: 40px;
+}
+
+.h-45{
+    height: 45px;
+}
+
+.h-50{
+    height: 50px;
+}
+
+/* max height */
 .max-h-50{
     max-height:550px
 }
