--- a/public/css/margins.css
+++ b/public/css/margins.css
@@ -10,6 +10,9 @@
 .mt-10-{
     margin-top: -10px;
 }
+.mt-6-{
+    margin-top: -6px;
+}
 .mt-5-{
     margin-top: -5px;
 }
@@ -18,6 +21,9 @@
 }
 .mt-7{
     margin-top:7px
+}
+.mt-8{
+    margin-top:8px
 }
 .mt-10{
     margin-top:10px
