--- a/public/css/popups.css
+++ b/public/css/popups.css
@@ -66,7 +66,16 @@
     font-size: 20px;
 }
 
+/* popup image */
+
 /* div popup close */
+.pp-img-and-close{
+    width: 100%;
+    color: var(--color1);
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+}
 .pp-close{
     width: 100%;
     color: var(--color1);
