--- a/src/views/inscriptions/mainMenu.ejs
+++ b/src/views/inscriptions/mainMenu.ejs
@@ -5,8 +5,10 @@
 
 <div class="subtitle">Seleccione un tipo de curso para comenzar</div>
 
+<div class="mt-20"><%- include('../partials/contactPopup') %></div>
+
 <form action="/inscripciones/tipos-de-cursos" method="POST">
-    <div class="flex flex-c rg-20 ai-c mt-50">
+    <div class="flex flex-c rg-20 ai-c mt-30">
         <% coursesTypes.forEach(ct => { %>
             <button type="submit" name="typeButton" value="<%= ct.id %>" class="btn-std fs-16 w-600 max-w-80p pad-17-0"><%= ct.type %></button> 
         <% }) %>
