--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="top-header">
         <div class="top-header-element">
-            <img src="/images/companyLogo.jpg" alt="Multibrand" class="company-logo">
+            <img src="/images/companyLogo.jpg" alt="FEVB" class="company-logo">
         </div>
         <div class="top-header-element top-header-right">
             <div class="user-logged">
@@ -17,32 +17,6 @@
     </div>
 
     <div class="bottom-header <%= locals.bottomHeaderMenu ? 'bottom-header-border' : '' %>">
-        <% if (locals.bottomHeaderMenu) { %>
-            <% bottomHeaderMenu.forEach(itemMenu => { %>
-                
-                <div class="<%= locals.selectedItem == itemMenu.name ? 'bottom-header-item bhi-selected' : 'bottom-header-item' %>">
-                    <a href="<%= itemMenu.href %>"><%= itemMenu.name %></a>                
-
-                    <% if (itemMenu.subitems.length > 0) { %>
-                        <div class="bottom-header-subitems" id="<%= 'subItems_' + itemMenu.id %>">
-                            <% itemMenu.subitems.forEach(subitem => { %>
-                                <a href="<%= subitem.href %>" class="bottom-header-subitem"><%= subitem.subitem %></a>                                
-                            <% }) %>
-                        </div>
-                        <div class="bottom-header-show-subitems"><i class="fa-solid fa-chevron-down"></i></div>
-                    <% } %>
-                </div>
-            <% }) %>
-            
-        <% } %>
-        <!-- Go to main menu -->
-         <% if (locals.bottomHeaderMenu) { %>
-            <div class="bottom-header-right-element">
-                <div><b class="color1"><%= locals.company ? locals.company.alias : '' %> </b>|</div>                
-                <a class="" href="/main-menu"><i class="fa-solid fa-house"></i></a>
-                <a class="" href="/main-menu">Home</a>
-            </div>
-         <% } %>
     </div>
 </div>  
 
